--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Felipe Almeida Mota</h1>
             <h2>Cientista de Dados</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
+            <a href="https://pdfhost.io/v/WuMXVGgiv_Currculo_Felipe_Almeida_Motapdf.pdf" class="btn-rounded-white">Currículo</a>
         </div>
         <!-- End #lead-content -->
 
@@ -155,7 +155,7 @@
     <!-- End #projects -->
 
     <div id="skills">
-        <h2 class="heading">Skills</h2>
+        <h2 class="heading">Habilidades</h2>
         <ul>
             <li>Python</li>
             <li>R</li>
@@ -177,7 +177,7 @@
     <div id="contact">
         <h2>Contato</h2>
         <div id="contact-form">
-            <form method="POST" action="https://formspree.io/felipealmeidac3@gmail.com">
+            <form method="POST" action="hhttps://formspree.io/f/xjvpekzg">
                 <input type="hidden" name="_subject" value="Contact request from personal website" />
                 <input type="email" name="_replyto" placeholder="Seu email" required>
                 <textarea name="message" placeholder="Sua mensagem" required></textarea>
@@ -204,13 +204,13 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/felipealmeidac3 target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/felipealmeidac3" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://linkedin.com/felipealmeidac3" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://plus.google.com/felipealmeidac3 target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                            <a href="https://plus.google.com/felipealmeidac3" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
