--- a/index.html
+++ b/index.html
@@ -91,9 +91,17 @@
                     Parte das atribuições: desenvolvimento de coletores de dados na web (web scraping) com Python; desenvolvimento de dashboards em Power BI e Data Studio; e coleta e análise de dados com SQL.
                 </p>
             </div>
+            <div data-date="Agosto 2019 – Agosto 2020">
+                <h3>Oftalmos Hospital</h3>
+                <h4>Assistente Administrativo</h4>
+                <p>
+                    Atuação na parte administrativa emitindo notas fiscais, gerando pagamento de médicos e reposição de estoque.
+                </p>
+            </div>
         </div>
     </div>
     <!-- End #experience -->
+    
 
     <div id="education">
         <h2 class="heading">Educação</h2>
@@ -103,13 +111,28 @@
             <h4>Bacharelado em Ciência da Computação</h4>
         </div>
         <!-- End .education-block -->
-
         <div class="education-block">
             <h3>IGTI</h3>
             <span class="education-date">Agosto 2020 - Setembro 2020</span>
             <h4>Bootcamp de Ciência de Dados</h4>
             <p>
             Concluído com certificação top performance
+            </p>
+        </div>
+        <div class="education-block">
+            <h3>Udemy</h3>
+            <span class="education-date">Junho 2020 - Junho 2020</span>
+            <h4>Formação Cientista de Dados com Python e R</h4>
+            <p>
+            Curso de 35,5 horas com certificado
+            </p>
+        </div>
+        <div class="education-block">
+            <h3>Coursera</h3>
+            <span class="education-date">Junho 2020 - Junho 2020</span>
+            <h4>Getting Started with AWS Machine Learning</h4>
+            <p>
+            Curso de Amazon Web Services apresentando ferramentas de Machine Learning da plataforma
             </p>
         </div>
         <!-- End .education-block -->
@@ -120,6 +143,20 @@
         <h2 class="heading">Projetos</h2>
         <div class="container">
             <div class="row">
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Observatório Social</h3>
+                        <p>
+                            Observatório Social é um projeto desenvolvido por estudantes do curso de Ciência da Computação, da Universidade Tiradentes - UNIT/SE. A proposta do projeto é criar um portal que mapeie indicadores sociais, como segurança, saúde e educação, a partir de dados textuais.
+                        </p>
+                        <a href="">Visualizar Projeto</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/project.jpg" />
