--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Análise de dados do cenário competitivo de League of Legends</h3>
+                        <h3>Análise e Modelagem Preditiva de Churn em Telecomunicações</h3>
                         <p>
-                        Como profundo fã desse jogo que é um dos maiores fenômenos da história dos games, resolvi investir meu tempo em um projeto pessoal para analisar os dados de jogos competitivos (profissionais) do jogo. Por enquanto, o projeto ainda está em andamento.
+                            Após ler no livro “Data Science para Negócios” de Provost sobre uma empresa de telecomunicações que usou análise de dados para evitar o churn de clientes, pensei o quanto as ferramentas podem ser úteis para avaliar e prever esse tipo de comportamento.
                         </p>
-                        <a href="https://github.com/felipealmeidac3/league_of_legends_ds">Visualizar Projeto</a>
+                        <a href="https://feliperama.medium.com/entendendo-e-prevendo-churn-em-telecomunica%C3%A7%C3%B5es-6e34f8e5dccd">Visualizar Projeto</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
