changes to links

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <p>
                             Após ler no livro “Data Science para Negócios” de Provost sobre uma empresa de telecomunicações que usou análise de dados para evitar o churn de clientes, pensei o quanto as ferramentas podem ser úteis para avaliar e prever esse tipo de comportamento.
                         </p>
-                        <a href="https://feliperama.medium.com/entendendo-e-prevendo-churn-em-telecomunica%C3%A7%C3%B5es-6e34f8e5dccd">Visualizar Projeto</a>
+                        <a href="https://github.com/felipealmeidac3/churn_detection">Visualizar Projeto</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
